Reactivate Integration Test org/apache/river/test/impl/lookupdiscovery/RestoreContextForTasks.td #83