@@ -34,6 +34,7 @@ import net.jini.config.Configuration;
 import net.jini.discovery.DiscoveryGroupManagement;
 import net.jini.discovery.LookupDiscovery;
 import net.jini.loader.pref.PreferredClassLoader;
+import org.apache.river.api.net.Uri;
 /**
  * With respect to the current implementation of the
  * <code>LookupDiscovery</code> utility, this class verifies
@@ -62,7 +63,7 @@ import net.jini.loader.pref.PreferredClassLoader;
 public class RestoreContextForTasks extends BaseQATest implements Test {
     private static final String CLASSNAME =
 	"org.apache.river.test.impl.lookupdiscovery.util.TestTaskProducerImpl";
-    private static final String QAHOMEPROP = "org.apache.river.test.home";
+    private static final String QAHOMEPROP = "org.apache.river.qa.home";
     private static final String JARLOCATION = "/lib/ld.jar";
 
     private TestTaskProducer tp;
@@ -111,8 +112,9 @@ public class RestoreContextForTasks extends BaseQATest implements Test {
     }
     public Test construct(QAConfig sysConfig) throws Exception {
 	super.construct(sysConfig);
+        Uri path = Uri.filePathToUri("file://" + System.getProperty(QAHOMEPROP) + JARLOCATION);     
 	ClassLoader cl = PreferredClassLoader.newInstance(new URL[]
-	    {new URL("file://" + System.getProperty(QAHOMEPROP) + JARLOCATION)},
+	    {path.toURL()},
 	    this.getClass().getClassLoader(), null, false);
 	tp = (TestTaskProducer)
 	    Class.forName(CLASSNAME, true, cl).newInstance();
